syntax = "proto3";

package pb_user;

import "user.proto";

option go_package = ".;pb_user";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}