syntax = "proto3";

package pb_user;

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = ".;pb_user";

import "google/api/annotations.proto";
import "rpc_get_user.proto";



service UserBank{
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post : "/v1/create_user"
      body : "*"
    };
  }
  rpc GetUser (GetUserRequest) returns (GetUserResponse){
    option (google.api.http) = {
      get : "/v1/get_user"
    };
  }
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){
    option (google.api.http) = {
      post : "/v1/login_user"
      body : "*"
    };
  }
}


